--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,19 @@
 {
   "compilerOptions": {
-    "target": "es6",
     "module": "commonjs",
-    "lib": ["es2016", "es2017.object", "es2017.string"],
+    "esModuleInterop": true,
+    "target": "es6",
     "declaration": true,
-    "strict": true,
     "noImplicitAny": true,
-    "strictNullChecks": true,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": false,
-    "inlineSourceMap": true,
-    "inlineSources": true,
+    "moduleResolution": "node",
+    "removeComments": true,
     "experimentalDecorators": true,
-    "strictPropertyInitialization": false,
-    "typeRoots": ["./node_modules/@types"],
+    "emitDecoratorMetadata": true,
+    "noUnusedLocals": true,
+    "skipLibCheck": true,
     "outDir": "dist",
     "baseUrl": "."
   },
   "include": ["src"],
-  "exclude": ["cdk.out"]
+  "exclude": ["node_modules/**/*"]
 }
