--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@founda/javascript",
-  "repository": "git://github.com/founda/javascript.git",
+  "repository": "https://github.com/founda/javascript.git",
   "version": "1.31.5",
   "description": "Cross project code style",
   "license": "All Rights Reserved",
