--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@founda/javascript",
   "repository": "https://github.com/founda/javascript.git",
-  "version": "1.31.5",
+  "version": "2.0.0",
   "description": "Cross project code style",
   "license": "All Rights Reserved",
+  "publishConfig": {
+    "registry": "http://localhost:4873"
+  },
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
